--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -43,3 +43,15 @@ jobs:
       - name: Test
         run: make test
 
+  test-web:
+    name: Run web tests
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Start
+        run: (cd web && make start)
+
+      - name: Test
+        run: (cd web && make test)
