--- a/web/Makefile
+++ b/web/Makefile
@@ -55,6 +55,9 @@ vendor: composer
 install: ## Install dependencies according to the current composer.lock file
 	$(DOCKER_COMP) run php composer install --prefer-dist --no-dev --no-progress --no-scripts --no-interaction
 
+install-test: ## Install dependencies for testing the web application
+	$(DOCKER_COMP) run php composer install --prefer-dist --no-progress --no-scripts --no-interaction
+
 ## —— Symfony 🎵 ———————————————————————————————————————————————————————————————
 sf: ## List all Symfony commands or pass the parameter "c=" to run a given command, example: make sf c=about
 	@$(eval c ?=)
