--- a/compose.yaml
+++ b/compose.yaml
@@ -14,6 +14,21 @@ services:
     environment:
       - GOFLAGS=-buildvcs=false
   
+  game-api:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: chinese-checkers-game-api
+    volumes:
+      - .:/app
+      - ./.cache/go-build:/root/.cache/go-build
+      - ./.cache/pkg/mod:/go/pkg/mod
+    working_dir: /app
+    entrypoint: ["go", "run", "api/chinese-checkers/main.go"]
+    tty: true
+    environment:
+      - GOFLAGS=-buildvcs=false
+  
   php:
     image: ${IMAGES_PREFIX:-}app-php
     restart: unless-stopped
