--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -38,7 +38,7 @@ jobs:
         run: make install
           
       - name: Build
-        run: make build
+        run: make build-cli && make build-api
         
       - name: Install web dependencies
         run: make composer-install-test
