--- a/web/composer.json
+++ b/web/composer.json
@@ -15,6 +15,7 @@
 		"symfony/dotenv": "7.2.*",
 		"symfony/flex": "^2",
 		"symfony/framework-bundle": "7.2.*",
+		"symfony/http-client": "7.2.*",
 		"symfony/runtime": "7.2.*",
 		"symfony/twig-bundle": "7.2.*",
 		"symfony/ux-twig-component": "^2.24",
