--- a/web/config/services.yaml
+++ b/web/config/services.yaml
@@ -4,6 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+  app.game_engine_api_url: "%env(APP_GAME_ENGINE_API_URL)%"
 
 services:
   # default configuration for services in *this* file
@@ -22,3 +23,7 @@ services:
   
   # add more service definitions when explicit configuration is needed
   # please note that last definitions always *replace* previous ones
+  
+  App\Game\GameApi.test: # Required when the service is not used in a controller or another service.
+    alias: 'App\Game\GameApi'
+    public: true
