Update docker configuration to install dependencies and setup production mode.

--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -4,7 +4,13 @@ services:
     build:
       context: web
       target: frankenphp_prod
+    volumes:
+      - ./web:/app
+      - ./web/frankenphp/Caddyfile:/etc/caddy/Caddyfile:ro
+      - ./web/frankenphp/conf.d/20-app.prod.ini:/usr/local/etc/php/app.conf.d/20-app.prod.ini:ro
     environment:
       APP_SECRET: ${APP_SECRET}
-      MERCURE_PUBLISHER_JWT_KEY: ${CADDY_MERCURE_JWT_SECRET}
-      MERCURE_SUBSCRIBER_JWT_KEY: ${CADDY_MERCURE_JWT_SECRET}
+      MERCURE_PUBLISHER_JWT_KEY: ${CADDY_MERCURE_JWT_SECRET:-${APP_SECRET}-disabled}
+      MERCURE_SUBSCRIBER_JWT_KEY: ${CADDY_MERCURE_JWT_SECRET:-${APP_SECRET}-disabled}
+      APP_ENV: "${APP_ENV:-production}"
+      APP_DEBUG: "${APP_DEBUG:-false}"
