--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -40,8 +40,5 @@ jobs:
       - name: Build
         run: make build-cli && make build-api
         
-      - name: Install web dependencies
-        run: make composer-install-test
-
-      - name: Run the web app and test
-        run: make start-web-app && make test && make down
+      - name: Run the web app and test it
+        run: make start-web-app-dev && make test && make down
