Add end to end win test with playwright and run it on push in CI.

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -42,3 +42,12 @@ jobs:
         
       - name: Run the web app and test it
         run: make start-web-app-dev && make test && make down
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: lts/*
+      - name: Install playwright dependencies
+        run: yarn install && yarn playwright install --with-deps
+      - name: Run the web app and run e2e tests
+        run: make start-web-app && make test-e2e && make down
+        
