Setup database and Doctrine, rename Board to Game, setup Game entity and migration.

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,11 @@
 
+# Database configuration.
+#POSTGRES_USER=app
+POSTGRES_PASSWORD=
+#POSTGRES_CB=app
+#POSTGRES_VERSION=17
+#POSTGRES_CHARSET=utf8
+
 # Generate an app secret securely, e.g. `openssl rand -hex 64`.
 APP_SECRET=
 # URL to the game engine API. By default, use the API docker container.
