--- a/compose.override.yaml
+++ b/compose.override.yaml
@@ -1,5 +1,11 @@
 # Development environment override
 services:
+###> doctrine/doctrine-bundle ###
+  database:
+    ports:
+      - "5432"
+###< doctrine/doctrine-bundle ###
+  
   php:
     volumes:
       - ./web:/app
