--- a/web/composer.json
+++ b/web/composer.json
@@ -9,6 +9,10 @@
 		"php": ">=8.3.20",
 		"ext-ctype": "*",
 		"ext-iconv": "*",
+		"doctrine/dbal": "^3",
+		"doctrine/doctrine-bundle": "^2.14",
+		"doctrine/doctrine-migrations-bundle": "^3.4",
+		"doctrine/orm": "^3.3",
 		"runtime/frankenphp-symfony": "^0.2.0",
 		"symfony/asset": "7.2.*",
 		"symfony/console": "7.2.*",
@@ -18,6 +22,7 @@
 		"symfony/http-client": "7.2.*",
 		"symfony/runtime": "7.2.*",
 		"symfony/twig-bundle": "7.2.*",
+		"symfony/uid": "7.2.*",
 		"symfony/ux-twig-component": "^2.24",
 		"symfony/validator": "7.2.*",
 		"symfony/yaml": "7.2.*",
