--- a/web/composer.json
+++ b/web/composer.json
@@ -21,6 +21,7 @@
 		"symfony/framework-bundle": "7.2.*",
 		"symfony/http-client": "7.2.*",
 		"symfony/runtime": "7.2.*",
+		"symfony/security-bundle": "7.2.*",
 		"symfony/twig-bundle": "7.2.*",
 		"symfony/uid": "7.2.*",
 		"symfony/ux-twig-component": "^2.24",
