--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -46,6 +46,8 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: lts/*
+      - name: Enable corepack to use latest stable yarn
+        run: corepack enable
       - name: Install playwright dependencies
         run: make install-e2e
       - name: Run the web app and run e2e tests
