--- a/web/package.json
+++ b/web/package.json
@@ -5,6 +5,7 @@
 		"build": "vite build"
 	},
 	"dependencies": {
+		"@phosphor-icons/react": "^2.1.7",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
 		"react-router-dom": "^7.5.3"
