--- a/web/package.json
+++ b/web/package.json
@@ -8,7 +8,8 @@
 		"@phosphor-icons/react": "^2.1.7",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
-		"react-router-dom": "^7.5.3"
+		"react-router-dom": "^7.5.3",
+		"zustand": "^5.0.4"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.52.0",
