--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
 		"react-router-dom": "^7.5.3",
+		"zod": "^3.24.4",
 		"zustand": "^5.0.4"
 	},
 	"devDependencies": {
