--- a/web/composer.json
+++ b/web/composer.json
@@ -13,6 +13,8 @@
 		"doctrine/doctrine-bundle": "^2.14",
 		"doctrine/doctrine-migrations-bundle": "^3.4",
 		"doctrine/orm": "^3.3",
+		"phpdocumentor/reflection-docblock": "^5.6",
+		"phpstan/phpdoc-parser": "^2.1",
 		"runtime/frankenphp-symfony": "^0.2.0",
 		"symfony/asset": "7.2.*",
 		"symfony/console": "7.2.*",
@@ -20,8 +22,11 @@
 		"symfony/flex": "^2",
 		"symfony/framework-bundle": "7.2.*",
 		"symfony/http-client": "7.2.*",
+		"symfony/property-access": "7.2.*",
+		"symfony/property-info": "7.2.*",
 		"symfony/runtime": "7.2.*",
 		"symfony/security-bundle": "7.2.*",
+		"symfony/serializer": "7.2.*",
 		"symfony/twig-bundle": "7.2.*",
 		"symfony/uid": "7.2.*",
 		"symfony/ux-twig-component": "^2.24",
