--- a/web/package.json
+++ b/web/package.json
@@ -6,6 +6,7 @@
 	},
 	"dependencies": {
 		"@phosphor-icons/react": "^2.1.7",
+		"@tanstack/react-query": "^5.75.5",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
 		"react-router-dom": "^7.5.3",
