--- a/web/package.json
+++ b/web/package.json
@@ -2,7 +2,8 @@
 	"name": "chinese-checkers",
 	"scripts": {
 		"dev": "vite",
-		"build": "vite build"
+		"build": "vite build",
+		"format": "prettier **/*.{js,ts,jsx,tsx,cjs,cts,mjs,mts,vue,astro} --write"
 	},
 	"dependencies": {
 		"@phosphor-icons/react": "^2.1.7",
@@ -21,6 +22,7 @@
 		"@types/react-dom": "^19.1.3",
 		"@vitejs/plugin-react": "^4.4.1",
 		"less": "^4.3.0",
+		"prettier": "^3.5.3",
 		"typescript": "^5.8.3",
 		"vite": "^6.3.5"
 	},
