--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -93,6 +93,7 @@ jobs:
             cd chinese-checkers
             git fetch
             git checkout main
+            git pull
             # Clean and deploy the new mobile app.
             rm -rf web/public/app
             tar xvf /home/ec2-user/mobile-app.tar.gz
