--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -93,7 +93,7 @@ jobs:
             cd chinese-checkers
             git fetch
             git checkout deploy
-            git pull
+            git reset --hard origin/deploy
             # Clean and deploy the new mobile app.
             rm -rf web/public/app
             tar xvf /home/ec2-user/mobile-app.tar.gz
