--- a/web/composer.json
+++ b/web/composer.json
@@ -9,6 +9,7 @@
 		"php": ">=8.3.20",
 		"ext-ctype": "*",
 		"ext-iconv": "*",
+		"ext-openssl": "*",
 		"doctrine/dbal": "^3",
 		"doctrine/doctrine-bundle": "^2.14",
 		"doctrine/doctrine-migrations-bundle": "^3.4",
