--- a/.env.sample
+++ b/.env.sample
@@ -10,3 +10,6 @@ POSTGRES_PASSWORD=
 APP_SECRET=
 # URL to the game engine API. By default, use the API docker container.
 APP_GAME_ENGINE_API_URL="http://game-api:3003"
+
+# Generate a mercure secret securely, e.g. `openssl rand -hex 64`.
+MERCURE_JWT_SECRET=
