--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
 		"react-router-dom": "^7.5.3",
+		"react-toastify": "^11.0.5",
 		"uuid": "^11.1.0",
 		"zod": "^3.24.4",
 		"zustand": "^5.0.4"
