--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -10,8 +10,8 @@ services:
       - ./web/frankenphp/conf.d/20-app.prod.ini:/usr/local/etc/php/app.conf.d/20-app.prod.ini:ro
     environment:
       APP_SECRET: ${APP_SECRET}
-      MERCURE_PUBLISHER_JWT_KEY: ${CADDY_MERCURE_JWT_SECRET:-${APP_SECRET}-disabled}
-      MERCURE_SUBSCRIBER_JWT_KEY: ${CADDY_MERCURE_JWT_SECRET:-${APP_SECRET}-disabled}
+      MERCURE_PUBLISHER_JWT_KEY: ${MERCURE_JWT_SECRET:-${APP_SECRET}-disabled}
+      MERCURE_SUBSCRIBER_JWT_KEY: ${MERCURE_JWT_SECRET:-${APP_SECRET}-disabled}
       APP_ENV: "${APP_ENV:-production}"
       APP_DEBUG: "${APP_DEBUG:-false}"
       CADDY_GLOBAL_OPTIONS: "auto_https off"
