Allow to move pawns when you are player of an online game.

--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
 		"@phosphor-icons/react": "^2.1.7",
 		"@tanstack/react-query": "^5.75.5",
 		"clsx": "^2.1.1",
+		"js-cookie": "^3.0.5",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
 		"react-router-dom": "^7.5.3",
@@ -19,6 +20,7 @@
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.52.0",
+		"@types/js-cookie": "^3",
 		"@types/node": "^22.15.3",
 		"@types/react": "^19.1.3",
 		"@types/react-dom": "^19.1.3",
