--- a/web/composer.json
+++ b/web/composer.json
@@ -14,6 +14,7 @@
 		"doctrine/doctrine-bundle": "^2.14",
 		"doctrine/doctrine-migrations-bundle": "^3.4",
 		"doctrine/orm": "^3.3",
+		"lexik/jwt-authentication-bundle": "^3.1",
 		"phpdocumentor/reflection-docblock": "^5.6",
 		"phpstan/phpdoc-parser": "^2.1",
 		"runtime/frankenphp-symfony": "^0.2.0",
