--- a/web/package.json
+++ b/web/package.json
@@ -8,6 +8,7 @@
 	"dependencies": {
 		"@phosphor-icons/react": "^2.1.7",
 		"@tanstack/react-query": "^5.75.5",
+		"@tsparticles/confetti": "^3.8.1",
 		"clsx": "^2.1.1",
 		"js-cookie": "^3.0.5",
 		"react": "^19.1.0",
