--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
 		"@tsparticles/confetti": "^3.8.1",
 		"clsx": "^2.1.1",
 		"js-cookie": "^3.0.5",
+		"jwt-decode": "^4.0.0",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
 		"react-router-dom": "^7.5.3",
