--- a/compose.yaml
+++ b/compose.yaml
@@ -33,6 +33,23 @@ services:
       # - ./docker/db/data:/var/lib/postgresql/data:rw
 ###< doctrine/doctrine-bundle ###
 
+  postgrest:
+    container_name: postgrest
+    image: postgrest/postgrest:latest
+    # Available environment variables documented here:
+    # https://postgrest.org/en/latest/configuration.html#environment-variables
+    environment:
+      # The standard connection URI format, documented at
+      # https://www.postgresql.org/docs/current/static/libpq-connect.html#LIBPQ-CONNSTRING
+      - PGRST_DB_URI=postgres://${POSTGRES_USER:-app}:${POSTGRES_PASSWORD:-!ChangeMe!}@database:5432/${POSTGRES_DB:-app}
+      # The name of which database schema to expose to REST clients
+      - PGRST_DB_SCHEMA=${POSTGREST_DB_SCHEMA:-public}
+      # The database role to use when no client authentication is provided
+      - PGRST_DB_ANON_ROLE=${DB_ANON_ROLE:-app}
+      # Overrides the base URL used within the OpenAPI self-documentation hosted at the API root path
+      - PGRST_OPENAPI_SERVER_PROXY_URI=https://chinese-checkers.marmelab.com/postgrest
+    restart: always
+
   php:
     build:
       context: web
