--- a/web/frankenphp/Caddyfile
+++ b/web/frankenphp/Caddyfile
@@ -51,6 +51,7 @@
 	@phpRoute {
 		not path /.well-known/mercure*
 		not path /app*
+		not path /postgrest*
 		not file {path}
 	}
 	rewrite @phpRoute index.php
@@ -68,6 +69,10 @@
 		file_server {
 			hide *.php
 		}
+	}
+
+	handle_path /postgrest* {
+		reverse_proxy postgrest:3000
 	}
 
 	file_server {
