Setup React Admin with a Postgrest data provider and a default resource list.

--- a/.env.sample
+++ b/.env.sample
@@ -11,5 +11,8 @@ APP_SECRET=
 # URL to the game engine API. By default, use the API docker container.
 APP_GAME_ENGINE_API_URL="http://game-api:3003"
 
+# Public server name in production.
+#SERVER_NAME=localhost
+
 # Generate a mercure secret securely, e.g. `openssl rand -hex 64`.
 MERCURE_JWT_SECRET=
