Fix GitHub workflow variable usage.

--- a/.github/workflows/admin.yml
+++ b/.github/workflows/admin.yml
@@ -18,7 +18,7 @@ jobs:
 
       - name: Build
         env:
-          VITE_POSTGREST_URL: https://${{ env.DEPLOY_SERVER_NAME }}/postgrest
+          VITE_POSTGREST_URL: https://${{ vars.DEPLOY_SERVER_NAME }}/postgrest
         run: make build-admin-panel
         
       - name: Upload static files as artifact
