Fix admin panel data URL.

--- a/.github/workflows/admin.yml
+++ b/.github/workflows/admin.yml
@@ -9,6 +9,7 @@ jobs:
   build:
     name: Build the admin panel to be deployed
     runs-on: ubuntu-latest
+    environment: github-pages
     steps:
       - uses: actions/checkout@v4
 
