--- a/admin/package.json
+++ b/admin/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.1",
     "@raphiniert/ra-data-postgrest": "^2.5.1",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-admin": "^5.8.0",
     "react-dom": "^19.0.0",
