--- a/web/composer.json
+++ b/web/composer.json
@@ -16,6 +16,7 @@
 		"doctrine/orm": "^3.3.3",
 		"fakerphp/faker": "^1.24",
 		"lexik/jwt-authentication-bundle": "^3.1.1",
+		"nelmio/cors-bundle": "^2.5",
 		"phpdocumentor/reflection-docblock": "^5.6.2",
 		"phpstan/phpdoc-parser": "^2.1",
 		"runtime/frankenphp-symfony": "^0.2.0",
